# Weaver

./: .gitignore  Dockerfile  LICENSE  README.md  readme.md  setup.cfg  setup.py
examples/: cifar10.py
examples/augments/: .gitignore  README.md  cifar10.py
examples/augments/configs/: AA.json  RA.json
examples/cifar10/: config.json  run.py
holim_lightning/: __init__.py  data_modules.py  datasets.py  models.py  optimizers.py  schedulers.py
holim_lightning/data/: datasets.py
holim_lightning/models/: __init__.py  encoders.py
holim_lightning/models/custom/: __init__.py  wrn28.py  wrn28_tf.py
holim_lightning/models/scratch/: wide_resnet.py
holim_lightning/transforms/: __init__.py  contain_resize.py  cutout.py  functional.py  gaussian_blur.py  rand_aug.py  twin_transforms.py
holim_lightning/transforms/augments/: __init__.py  auto_augment.py  functional.py  rand_augment.py
holim_lightning/transforms/auto_aug/: __init__.py  functional.py
holim_lightning/transforms/rand_aug/: functional.py
src/weaver/: __init__.py  datasets.py  old.schedulers.py  optimizers.py  schedulers.py
src/weaver/classifiers/: __init__.py  resnets.py
src/weaver/models/: __init__.py
src/weaver/optimizers/: README.md  __init__.py  utils.py
src/weaver/schedulers/: __init__.py  half_cosine_annealing_lr.py
src/weaver/transforms/: __init__.py  (+5 more)
tests/: test_models.py  test_optimizers.py  test_schedulers.py  test_transforms.py
weaver/: datasets.py  optimizers.py  schedulers.py
weaver/models/: __init__.py  models.py
weaver/transforms/: __init__.py  twin_transforms.py
(+19 files in other folders)
