[metadata]
name = weaver-pytorch-tools
version = 0.0.2
author = Holim Lim
author_email = ihl7029@europa.snu.ac.kr
description = Small utilities for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Holim0711/Weaver-pytorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src